--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.h2.console.enabled=true
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
 
+spring.jpa.hibernate.ddl-auto=create
+
 #MyBatis
 mybatis.type-aliases-package=hello.itemservice.domain
 mybatis.configuration.map-underscore-to-camel-case=true
