--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -10,3 +10,8 @@ logging.level.org.springframework.jdbc=debug
 mybatis.type-aliases-package=hello.itemservice.domain
 mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.hello.itemservice.repository.mybatis=trace
+
+#JPA log 하이버네이트가 생성하고 실행하는 sql 확인, escriptor.sql.BasicBinder=TRACE 는 SQL에 바인딩 되는 파라미터 확인 가능
+#pring.jpa.show-sql=true : 참고로 이런 설정도 있는데 이 설정은 System.out 콘솔을 통해서 SQL이 출력
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
